theme_essential: Prevent breadcrumb navigation wrapping unnecessarily

--- a/style/custom.css
+++ b/style/custom.css
@@ -227,6 +227,12 @@ nav[role=navigation] .coursesearch form input[type="submit"] {
     font-weight: bold;
     color: #fff;
 }
+.breadcrumb-nav {
+    width: auto;
+}
+.breadcrumb-nav ul.breadcrumb {
+    width: inherit !important;
+}
 .breadcrumb-button input[type="submit"]:hover {
     color: #fff;
 }
